--- a/vite-project/src/Photoshoots.css
+++ b/vite-project/src/Photoshoots.css
@@ -1,39 +1,111 @@
+/* Photoshoots.css */
 .image-grid {
-    display: grid;
-    gap: 10px;
-    margin-top: 20px;
-  }
-  
-  @media (min-width: 1200px) {
-    .image-grid {
-      grid-template-columns: repeat(4, 1fr);
-    }
-  }
-  
-  @media (min-width: 900px) and (max-width: 1199px) {
-    .image-grid {
-      grid-template-columns: repeat(3, 1fr);
-    }
-  }
-  
-  @media (min-width: 600px) and (max-width: 899px) {
-    .image-grid {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
-  
-  @media (max-width: 599px) {
-    .image-grid {
-      grid-template-columns: 1fr;
-    }
-  }
-  
-  .image-item {
-    width: 100%;
-    height: auto;
-    transition: transform 0.3s ease;
-  }
-  
-  .image-item:hover {
-    transform: scale(1.05);
-  }
+  display: grid;
+  gap: 10px;
+  margin-top: 20px;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.image-item {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.image-item:hover {
+  transform: scale(1.05);
+}
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+  max-width: 90%;
+  max-height: 90%;
+}
+.prev-button, .next-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  font-size: 30px;
+  padding: 10px;
+  cursor: pointer;
+}
+.prev-button {
+  left: 10px;
+}
+
+.next-button {
+  right: 10px;
+}
+.close {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  color: #fff;
+  font-size: 35px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.delete-button {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.confirmation-popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  text-align: center;
+}
+.confirmation-popup h3 {
+  color: black;
+  margin-bottom: 20px; /* Add some space below the h3 element */
+}
+
+.confirmation-popup button {
+  margin: 0 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.confirmation-popup .confirm {
+  background-color: green;
+  color: white;
+  border: none;
+}
+
+.confirmation-popup .cancel {
+  background-color: red;
+  color: white;
+  border: none;
+}
